[package]

name = "bitflags"
version = "0.3.3"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/bitflags"
homepage = "https://github.com/rust-lang/bitflags"
documentation = "https://doc.rust-lang.org/bitflags"
description = """
A macro to generate structures which behave like bitflags.
"""

[target.x86_64-unknown-none-gnu.dependencies.core]
git = "https://github.com/phil-opp/nightly-libcore.git"
features = [ "disable_float" ]
